feat: add print and emission of mds

--- a/md.html
+++ b/md.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-Br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Test</title>
+  <title>MDs</title>
 </head>
 <style>
   body {
@@ -115,65 +115,20 @@
       </div>
       <div class="md-patient">
         <p>Nome:</p>
-        <p class="patient">DAVINA DA CUNHA</p>
+        <p class="patient">BENEDICTA ARANTES FERREIRA</p>
       </div>
       <div class="md-body">
-        <p class="use-method">USO ORAL:</p>
         <div class="medicine">
-          <p class="medicine-name">1) HEMIFUMARATO DE QUETIAPINA 25 MG</p>
-          <p class="line"></p>
-          <p class="medicine-quantity">2 CAIXAS</p>
-        </div>
-        <p class="instruction">TOMAR DOIS COMPRIMIDOS POR DIA À NOITE</p>
-        <p class="use-method">USO ORAL:</p>
-        <div class="medicine">
-          <p class="medicine-name">2) OXALATO DE ESCITALOPRAM 10 MG</p>
+          <p class="medicine-name">1) NEURAL 50MG</p>
           <p class="line"></p>
           <p class="medicine-quantity">1 CAIXA</p>
         </div>
-        <p class="instruction">TOMAR UM COMPRIMIDO PELA MANHÃ</p>
-      </div>
-      <div class="md-footer">
-        <p>25/04/2025</p>
-        <p class="signature">ASSINATURA DO MÉDICO - CRM</p>
-    </div>
-  </div>
-  <div class="md">
-    <div class="md-header">
-      <div>
-        <img class="logo" src="https://seeklogo.com/images/S/sus-logo-E2EA177DC0-seeklogo.com.png" alt="Logo">
-      </div>
-      <div class="title">
-        <h4>PREFEITURA MUNICIPAL DE PRATÁPOLIS</h4>
-        <p>PSF 2 – SÃO FRANCISCO DE ASSIS</p>
-        <p>TELEFONE:3533-1415</p>
-        <p>CENTRO</p>
-      </div>
-    </div>
-    <div class="md-patient">
-      <p>Nome:</p>
-      <p class="patient">DAVINA DA CUNHA</p>
-    </div>
-    <div class="md-body">
-      <p class="use-method">USO ORAL:</p>
-      <div class="medicine">
-        <p class="medicine-name">1) HEMIFUMARATO DE QUETIAPINA 25 MG</p>
-        <p class="line"></p>
-        <p class="medicine-quantity">2 CAIXAS</p>
-      </div>
-      <p class="instruction">TOMAR DOIS COMPRIMIDOS POR DIA À NOITE</p>
-      <p class="use-method">USO ORAL:</p>
-      <div class="medicine">
-        <p class="medicine-name">2) OXALATO DE ESCITALOPRAM 10 MG</p>
-        <p class="line"></p>
-        <p class="medicine-quantity">1 CAIXA</p>
-      </div>
-      <p class="instruction">TOMAR UM COMPRIMIDO PELA MANHÃ</p>
-    </div>
-    <div class="md-footer">
-      <p>25/04/2025</p>
-      <p class="signature">ASSINATURA DO MÉDICO - CRM</p>
-  </div>
-</div>
+        <p class="instruction">TOMAR 1 COMPRIMIDO POR DIA.</p>
+        <div class="md-footer">
+          <p>26/04/2025</p>
+           <p class="signature">ASSINATURA DO MÉDICO - CRM</p>
+          </div>
+        </div>
+      </div><div class="md">              <div class="md-header">                <div>                  <img class="logo" src="https://seeklogo.com/images/S/sus-logo-E2EA177DC0-seeklogo.com.png" alt="Logo">                </div>                <div class="title">                  <h4>PREFEITURA MUNICIPAL DE PRATÁPOLIS</h4>                  <p>PSF 2 – SÃO FRANCISCO DE ASSIS</p>                  <p>TELEFONE:3533-1415</p>                  <p>CENTRO</p>                </div>              </div>  <div class="md-patient">        <p>Nome:</p>        <p class="patient">BENEDICTA ARANTES FERREIRA</p>      </div>      <div class="md-body">                  <p class="use-method">USO ORAL:</p>                   <div class="medicine">          <p class="medicine-name">1) DELLER 50MG</p>          <p class="line"></p>          <p class="medicine-quantity">1 CAIXA</p>        </div>        <p class="instruction">TOMAR UM COMPRIMIDO POR DIA.</p>                               <div class="medicine">          <p class="medicine-name">2) OLANZAPINA 5MG</p>          <p class="line"></p>          <p class="medicine-quantity">1 CAIXA</p>        </div>        <p class="instruction">TOMAR 1 COMPRIMIDO A NOITE.</p>                               <div class="md-footer">        <p>26/04/2025</p>        <p class="signature">ASSINATURA DO MÉDICO - CRM</p>    </div>  </div>      </div>
 </body>
 </html>
